// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`useTooltipBase show shows tooltip 1`] = `
Object {
  "className": "Tooltip Tooltip--top",
  "firstChild": Object {
    "className": "Tooltip__body",
    "style": Object {},
    "textContent": "Test",
  },
  "id": "tooltip-1",
  "lastChild": Object {
    "className": "Tooltip__arrow",
    "style": Object {
      "left": "50%",
      "top": undefined,
    },
  },
  "style": Object {
    "left": "190px",
    "top": "90px",
  },
}
`;

exports[`useTooltipBase show shows tooltip on mouse over when placement is bottom 1`] = `
Object {
  "className": "Tooltip Tooltip--bottom",
  "firstChild": Object {
    "className": "Tooltip__body",
    "style": Object {},
    "textContent": "Test",
  },
  "id": "tooltip-1",
  "lastChild": Object {
    "className": "Tooltip__arrow",
    "style": Object {
      "left": "50%",
      "top": undefined,
    },
  },
  "style": Object {
    "left": "190px",
    "top": "150px",
  },
}
`;

exports[`useTooltipBase show shows tooltip on mouse over when placement is left 1`] = `
Object {
  "className": "Tooltip Tooltip--left",
  "firstChild": Object {
    "className": "Tooltip__body",
    "style": Object {},
    "textContent": "Test",
  },
  "id": "tooltip-1",
  "lastChild": Object {
    "className": "Tooltip__arrow",
    "style": Object {
      "left": undefined,
      "top": "50%",
    },
  },
  "style": Object {
    "left": "80px",
    "top": "120px",
  },
}
`;

exports[`useTooltipBase show shows tooltip on mouse over when placement is right 1`] = `
Object {
  "className": "Tooltip Tooltip--right",
  "firstChild": Object {
    "className": "Tooltip__body",
    "style": Object {},
    "textContent": "Test",
  },
  "id": "tooltip-1",
  "lastChild": Object {
    "className": "Tooltip__arrow",
    "style": Object {
      "left": undefined,
      "top": "50%",
    },
  },
  "style": Object {
    "left": "300px",
    "top": "120px",
  },
}
`;

exports[`useTooltipBase show shows tooltip on mouse over when the tooltip position exceeds the window width 1`] = `
Object {
  "className": "Tooltip Tooltip--top",
  "firstChild": Object {
    "className": "Tooltip__body",
    "style": Object {},
    "textContent": "Test",
  },
  "id": "tooltip-1",
  "lastChild": Object {
    "className": "Tooltip__arrow",
    "style": Object {
      "left": "72%",
      "top": undefined,
    },
  },
  "style": Object {
    "left": "224px",
    "top": "90px",
  },
}
`;

exports[`useTooltipBase show shows tooltip on mouse over when the tooltip position is negative 1`] = `
Object {
  "className": "Tooltip Tooltip--top",
  "firstChild": Object {
    "className": "Tooltip__body",
    "style": Object {},
    "textContent": "Test",
  },
  "id": "tooltip-1",
  "lastChild": Object {
    "className": "Tooltip__arrow",
    "style": Object {
      "left": "25%",
      "top": undefined,
    },
  },
  "style": Object {
    "left": "0px",
    "top": "90px",
  },
}
`;
